sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:3: error: ';' expected but '=' found.
  v : Int=0
         ^AlgInsertionSort:4: error: ';' expected but '=' found.
  k : Int=0
         ^